# nikke-cjjc-automator

./: .gitignore  README.md  hook-nikke_cjjc_automator.py  pyproject.toml  settings.default.toml  settings.toml  version_info.txt
.github/workflows/: build.yaml  release.yml
nikke_cjjc_automator/: __init__.py  cli.py  config.py  main.py
nikke_cjjc_automator/controller/: action.py  hotkey.py  stitch.py  window.py
nikke_cjjc_automator/controller/mode_strategy/: __init__.py  mode.py  modestrategy_impl.py
nikke_cjjc_automator/model/: coordinates.py
nikke_cjjc_automator/view/: menu.py  notify.py
src/nikke_cjjc_automator/: cli.py  config.py  core.py  main.py
src/nikke_cjjc_automator/controller/: __init__.py  action.py  hotkey.py  stitch.py  window.py
src/nikke_cjjc_automator/controller/mode_strategy/: __init__.py  modestrategy_impl.py
src/nikke_cjjc_automator/model/: __init__.py  coordinates.py
src/nikke_cjjc_automator/view/: __init__.py  menu.py  notify.py
