[project]
name = "nikke-cjjc-automator"
version = "1.1.8"
description = "NIKKE CJJC Automator CLI tool"
authors = [{name = "cwang", email = "cwang@cwang.cc"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "typer",
    "pygetwindow",
    "pyautogui",
    "Pillow",
    "keyboard",
    "psutil",
    "pywin32",
    "dynaconf",
    "questionary",
    "pyinstaller>=5.13.2,<6.0.0",
    "cython"
]

[project.scripts]
nikke-cjjc-automator = "nikke_cjjc_automator.cli:app"

[tool.pdm.scripts]
nikke-cjjc-automator-build = "pyinstaller src/nikke_cjjc_automator/cli.py -F --name nikke-cjjc-automator --exclude-module pkg_resources --exclude-module pyinstaller --version-file version_info.txt --add-data settings.default.toml;. --add-data img/manual.jpg;."
nikke-cjjc-automator-build-pyd = "pyinstaller src/nikke_cjjc_automator/cli.py -F --additional-hooks-dir=. -n nikke-cjjc-automator --exclude-module pkg_resources --exclude-module pyinstaller --version-file version_info.txt"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/nikke_cjjc_automator"]

[tool.dynaconf]
settings_files = ["settings.toml"]
